<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Foot Reflexology</string>
    <string name="app_name_background">Foot Reflexology</string>
    <string name="editName_FirstLast_Name">ระบุหมายเลขบัตรประชาชน 13 หลัก</string>
    <string name="btn_SignUp">ลงทะเบียนผู้ป่วย</string>
    <string name="btn_MainPage">เข้าสู่หน้าหลัก</string>
    <string name="open_drawer">Open Menu</string>
    <string name="close_drawer">Close Menu</string>
    <string name="action_settings">ตั้งค่า</string>
    <string name="action_about">เกี่ยวกับ</string>
    <string name="title_activity_settings">ตั้งค่า</string>
    <string name="action_logout">ออกจากระบบ</string>
    <string name="select_the_response">เลือกเขตตอบสนองของอวัยวะต่าง ๆ</string>
    <string name="action_edit">แก้ไขประวัติส่วนตัว</string>
    <string name="action_edit_medical">แก้ไขประวัติการรักษา</string>
    <string name="first_name">ชื่อ</string>
    <string name="last_name">นามสกุล</string>
    <string name="gender">เพศ</string>
    <string name="male">ชาย</string>
    <string name="female">หญิง</string>
    <string name="day_of_birth">เกิดวันที่</string>
    <string name="identification_number">เลขประจำตัวประชาชน</string>
    <string name="phone_number">เบอร์โทรศัพท์</string>
    <string name="address">ที่อยู่</string>
    <string name="sub_district">ตำบล</string>
    <string name="district">อำเภอ</string>
    <string name="province">จังหวัด</string>
    <string name="age">อายุ</string>
    <string name="year">ปี</string>
    <string name="action_search">ค้นหาโรค..</string>
    <string name="right_foot">right_foot</string>
    <string name="left_foot">left_foot</string>
    <string name="in_the_foot">in_the_foot</string>
    <string name="out_side_foot">out_side_foot</string>
    <string name="on_the_back_foot">on_the_back_foot</string>
    <string name="reflexology_background">reflexology_background</string>
    <string name="sentiment_satisfied">sentiment_satisfied</string>
    <string name="save">บันทึก</string>
    <string name="action_save">บันทึก</string>
    <string name="write_something">เขียนอะไรบางอย่าง..</string>
    <string name="click_show_details">คลิกดูรายละเอียด</string>
    <string name="disease_name">โรค</string>
    <string name="detail">รายละเอียดและสาเหตุ</string>
    <string name="treatment">การรักษา</string>
    <string name="recommend">คำแนะนำ</string>
    <string name="date">วันที่</string>
    <string name="month">เดือน</string>
    <string name="years">ปี พ.ศ.</string>
    <string name="action_add">เพิ่มประวัติการรักษา</string>
    <string name="sub_item">เพิ่มเติม</string>
    <string name="rank">ลำดับที่</string>
    <string name="behavior">อาการ</string>
    <string name="createdAt">วันที่เข้ารับการรักษา</string>
    <string name="updatedAt">อัพเดทอาการล่าสุด</string>
    <string name="pick_date">เลือกวันเกิด</string>
    <string name="should_eat">อาหารที่ควรรับประทาน</string>
    <string name="should_not_eat">อาหารที่ควรหลีกเลี่ยง</string>
    <string name="action_sort_medical_history">เรียงลำดับ</string>
    <string name="notification_description">คำอธิบายการแจ้งเตือน</string>
    <string name="show_alert">แสดงการแจ้งเตือนอาการ</string>
    <string name="expand_more">แสดงมากขึ้น</string>
    <string name="expand_less">แสดงน้อยลง</string>
    <string name="previous_chart_title">กราฟแสดงอาการย้อนหลัง 3 ครั้ง</string>
    <string name="four_level_title">แกนแนวตั้งแสดงอาการ 4 ระดับ</string>
    <string name="lv_one">ระดับ 1 หมายถึง อาการแย่</string>
    <string name="lv_two">ระดับ 2 หมายถึง อาการทรงตัว</string>
    <string name="lv_three">ระดับ 3 หมายถึง อาการดีขึ้น</string>
    <string name="lv_four">ระดับ 4 หมายถึง อาการหายเป็นปกติ</string>
</resources>
