<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jirayu.pond.footreflexology.activity.LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary" />

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tvAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="15dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/app_name_background"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/app_name_background"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">


                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/editname_margin_left"
                    android:layout_marginRight="@dimen/editname_margin_right"
                    android:background="@drawable/edittext_person_circle"
                    android:inputType="text"
                    android:hint="@string/editName_FirstLast_Name"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_alignLeft="@id/editName"
                    android:layout_alignRight="@id/editName"
                    android:layout_below="@id/editName"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/btn_signup"
                    android:gravity="center"
                    android:text="@string/btn_SignUp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnIntoMainPage"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/btnSignUp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="35dp"
                    android:background="@android:color/transparent"
                    android:text="@string/btn_MainPage"
                    android:textColor="@drawable/selector_btn_intomainpage"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
