<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_color" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tvAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="15dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/app_name_background"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/app_name_background"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/edit_name_margin_left"
                    android:layout_marginRight="@dimen/edit_name_margin_right"
                    android:background="@drawable/edit_person_circle"
                    android:inputType="number"
                    android:hint="@string/editName_FirstLast_Name"
                    android:maxLength="13"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_alignLeft="@id/editName"
                    android:layout_alignRight="@id/editName"
                    android:layout_below="@id/editName"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/selector_btn_sign_up_login_page"
                    android:gravity="center"
                    android:text="@string/btn_SignUp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnIntoMainPage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnSignUp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="35dp"
                    android:background="@android:color/transparent"
                    android:text="@string/btn_MainPage"
                    android:textColor="@drawable/selector_btn_main_page"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>